--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                
 
 					 
-					 <img src="images/animate.png"  alt="" width="700px" height="500px" class="ani-image"/>
+					 <img src="animate.png"  alt="" width="700px" height="500px" class="ani-image"/>
 
                      <div class="product-sh" >
                      <div class="wave-container"> 
@@ -208,7 +208,7 @@
                      <a href="beautycat.html">
                         <div class="box-img">
                            <h4>Beauty,Health</h4>
-                           <img src="images/beauty.jpg" width="240px" height="100px" alt="" />
+                           <img src="beauty.jpg" width="240px" height="100px" alt="" />
                         </div>
                      </a>
                   </div>
